-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.1.2
-
40599b529695aca0e50286797a507eff925462fa
When applications used during a built fail to start on linux this is not recognized as an issue. This output is generated on stderr when e.g. a required library is not found:
/home/qt5-stable/bin/uic: error while loading shared libraries: libicui18n.so.52: cannot open shared object file: No such file or directory
Add a Os specific parser for linux that catches these.
For Gerrit Dashboard: QTCREATORBUG-12550 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
110786,2 | Linux: Warn on build applications failing due to missing libraries | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |