Linux: Warn on build applications failing due to missing libraries

This can happen e.g. when a system upgrade bumps the soversion of
libraries moc/uic/etc. are using.

Task-number: QTCREATORBUG-12550
Change-Id: I4ee3427d8dcd390133ac178762a26ba48cddd4bf
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>